<resources>
    <string name="app_name">kassa-android</string>
    <string name="edit_check">Edit check</string>
    <string name="get_all_checks">Get all checks</string>
    <string name="new_check">New check</string>
    <string name="textview">TextView</string>
    <string name="check_sum">Check sum</string>
    <string name="shop_name">Shop name</string>
    <string name="comment">Comment</string>
    <string name="add">Add</string>
    <string name="date">Date</string>

</resources>