<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CheckAddActivity">

    <EditText
        android:id="@+id/editTextCheckSum"
        android:layout_width="410dp"
        android:layout_height="61dp"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:text="0"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/check_sum" />


    <Button
        android:id="@+id/dateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Set date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCheckSum" />

    <EditText
        android:id="@+id/editTextShopName"
        android:layout_width="411dp"
        android:layout_height="68dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/shop_name"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateButton" />

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="406dp"
        android:layout_height="269dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/comment"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextShopName" />

    <Button
        android:id="@+id/buttonAddCheck"
        android:layout_width="0dp"
        android:layout_height="81dp"
        android:text="@string/add"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>